--- a/src/pages/ProjectsPage/ProjectsPage.styles.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.styles.scss
@@ -2,4 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .component {
+        padding: 10px 0;
+
+        button.hide-btn {
+            display: flex;
+            align-items: center;
+            margin: auto;
+        }
+    }
 }
